@@ -20,6 +20,7 @@ include::include.adoc[]
 * Add new well-known versions to `Jvm` helper to support versions up to 29 spockPull:2057[]
 ** Built-in extensions have been updated to use this new interface where applicable.
 * Add best-effort error reporting for interactions on final methods when using the `byte-buddy` mock maker spockIssue:2039[]
+* Add support for `@FailsWith` to assert exception message spockIssue:2039[]
 * Improve `@Timeout` extension will now use virtual threads if available spockPull:1986[]
 * Improve mock argument matching, types constraints or arguments in interactions can now handle primitive types like `_ as int` spockIssue:1974[]
 * Improve `verifyEach` to accept an optional second index parameter for the assertion block closure spockPull:2043[]
